--- a/clase-03-intro-viz-ggplot2/README.Rmd
+++ b/clase-03-intro-viz-ggplot2/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Clase 02: Data frames y `dplyr`"
+title: "Clase 03: `ggplot2`"
 output:
   github_document:
     html_preview: false
@@ -11,48 +11,23 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 
 ## Temario
 
-1. Magrittr y pipe `%>%`
-1. Definiendo data frames
-1. Manipulando data frames. Principales verbos:  select, filter, mutate, summarize, group_by.
-1. Joins
+1. Para que visualizar
+1. ggplot2
 
 ## Ejemplos
 
 ```{r}
-library(dplyr)
-
-x <- data_frame(key = c(1, 2, 3), val_x = c("x1", "x2", "x3"))
-x
-
-y <- data_frame(key = c(1, 2, 4), val_y = c("y1", "y2", "y3"))
-y
+library(ggplot2)
+data(mpg, package = "ggplot2")
 
 
-left_join(x, y)
+mpg
 
-semi_join(x, y)
 
-anti_join(x, y)
+ggplot(mpg)
 
-z <- data_frame(key = c(1, 1, 2, 2, 2, 3), val_z = c(1, 2, 3, 3, 5, 6))
-z
 
-xz <- left_join(x, z) 
-xz
+ggplot(mpg) + 
+  geom_point(aes(hwy, displ))
 
-xz %>% 
-  group_by(key) %>% 
-  summarise(conteo = n(),
-            dinstintos = n_distinct(val_z),
-            max_z = max(val_z))
-
-xz %>% 
-  select(key, val_z) %>% 
-  mutate(cumsum_z = cumsum(val_z))
-
-xz %>% 
-  select(key, val_z) %>% 
-  group_by(key) %>% 
-  mutate(cumsum_z = cumsum(val_z))
-  
 ```
